--- a/q/274061.html
+++ b/q/274061.html
@@ -26,24 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
-<tr d-ix="1"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
-<tr d-ix="2"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
+<tr d-ix="0"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
+<tr d-ix="1"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
+<tr d-ix="2"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
+<tr d-ix="3"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 26 bytes</h1>
+<pre><code>Mi`^11$|^8|^h?[oó]
+T`d`\ou
+</code></pre>
+<p><a href="https://tio.run/##PY@9CsIwFIX3PkUHBSchFKSLOohQB6mg4qCWBhNMJc2F23brCzl3c@2DxZ9763S@k3NySFDXhZN@PMnD@SKcBn5b5JkQozaL28wsz9B31@CQq/wCjffS6od0CuFbhqDvrP5hEwB@EsKk7xALxUEcRQwkQrDShBAMM5JSWgID6HjCpPiffiJoKqwM3MDKmu0JUG3c2t1tURk6SvcpXdvJ4cW82HCB3JFcwmHCadLoCgYsB@pfpaa/wRs" rel="nofollow noreferrer" title="Retina 0.8.2 – Try It Online">Try it online!</a> Link includes test suite that removes the <code> =&gt; [ou]</code> suffix to allow the test cases to be used as input. Explanation: Port of @Arnauld's JavaScript answer.</p>
+<pre><code>Mi`^11$|^8|^h?[oó]
+</code></pre>
+<p>Count the number of occurrences of the pattern in the input.</p>
+<pre><code>T`d`\ou
+</code></pre>
+<p>Index that into the string <code>ou</code>. (<code>o</code> is magic in transliteration mode so it needs to be quoted to be literal. <code>d</code> is also magic, being a byte shorter than writing <code>01</code>.)</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:'ou'[s.strip('hH')[:1]in[*'oóOÓ']or'8'==s[:1]or'11'==s]
 </code></pre>
 <p>The list unpacking could be removed (-3 bytes) if strings matching <code>/^[hH]*$/g</code> could output <code>'u'</code> instead of <code>'o'</code>.</p>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYSj2/VD26WK@4pCizQEM9w0NdM9rKMDYzL1pLPf/wZv/Dk9Vj84vULdRtbYtBEkC2oSGIE/u/oCgzr0QjTUPd4/DmoqLMlHx1Tc3/AA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Google Sheets, 49 bytes</h1>
+<div id="pu2" class="pu"><h1>Google Sheets, 49 bytes</h1>
 <pre><code>=if(regexmatch(A1,&quot;(?i)^h?[oó]|^11$|^8&quot;),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p>Put the string in cell <code>A1</code> and the formula in <code>B1</code>. Expects that the data is text strings as specified in the question (<strong>Format &gt; Number &gt; Plain text</strong>). Uses <a href="https://codegolf.stackexchange.com/a/274064/119296">Arnauld's regex</a>.</p>
 <p><img src="https://i.sstatic.net/lGQOnHL9.png" alt="screenshot" /></p>
 </div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu3" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;&quot;ou&quot;[+/^h?[oó]|^11$|^8/i.test(s)]
 </code></pre>
