--- a/q/274051.html
+++ b/q/274051.html
@@ -26,15 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
-<tr d-ix="1"><td>229</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="0"><td>189</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="1"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
 <tr d-ix="2"><td>166</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
 <tr d-ix="3"><td>182</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
 <tr d-ix="4"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
 <tr d-ix="5"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="6"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> 189 bytes</h1>
+<p><em>-55 bytes by encoding the character positions as a list.</em><br />
+<em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
+<em>-6 bytes by using unprintables.</em><br />
+<em>-4 bytes by using</em> <code>[0]*n</code> <em>instead of</em> <code>range(n)</code><em>.</em><br />
+<em>-40 bytes by Jonathan Allan.</em></p>
+
+<pre class="lang-python prettyprint-override"><code>def f(n):
+ x=2*n;l=[7*x*[' ']for i in range(5*x)];y=N=0
+ for v in b'cV6#0P':
+  for _ in[0]*n:
+   for t in b'&#3;&#1;&#5;\12&#6;&#8;&#12;&#17;&#16;&#18;&#9;&#14;':l[y+t//5][x+t%5]='\/||'[N%4];N+=1
+   x+=v//8-8;y+=v%8-3
+ return l
+</code></pre>
+<p>First example is inputted as 1.<br />
+The <code>\12</code> in the unprintable string is literal.</p>
+<p><a href="https://tio.run/##JYzfSsMwFMYRUbQMmT7BASknTZ3pOuvKSl6heOVNGmTTViv1tIQ4Uti7d@32XX38vj9db39aWqWdGYavsoKKUbDxwMmYU9ZIteaOKwTUVWughprAbOm7ZAl3gc56mcvIgynbT9kOP99fH6M3HC9O9GOkKtKcJnAi9ty7vLgqlvH1zex@/nB7h5tG9aEVItHKhdZPtMRCHA6ocv9FZ3kol9PehXIvRLpIs350frpYeWBK@28ImqEzNVmGBeHzb1sT@9t2DM/@qWJxMGo4Ag" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
 <pre><code>( {2*$~1-2}) ( / \\){$~1}
 ($1 (\|\\ /){$~1}\|
 )($1( \|){#1+3}
@@ -53,24 +72,6 @@ $3$5 $1$7{$~1}
 <p><a href="https://ato.pxeger.com/run?1=TVA7bsMwDEVXnYKGOVApBJey48RLLlJ16OB26xAkk61cpEuAokuP1NPkiRGKTuQj-D7k589xfp8_5uPrab5ev8-nt7D_fTgILXHDFw0xexLqKCW_AGcnrCRpTYm6-yStzmMolFa_tPrYZ-dZO-CU1rqDXhw02wmCDaoJC_EAEuZ789IhxE07ZdCfHE_C49IXoKwRuOMdARBKTQMRZxr_JJC3TJyRWXurUmJviRryxqaSRccw5AaKngjarmzAmXU0f0PRUPxzY7WrynH1_qC5cHsu67yzc-9vrN_8eh5eansD" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Generates the figure line by line. With reference to the N = 3 diagram, the output always contains one copy of the first four lines, then N-2 copies of the next three, then one copy of the next two, then N-2 copies of the next three, and finally one copy of the last four. These roughly correspond to the lines of the program, except that the last line of the program generates the last three lines of the output.</p>
 <p>This could probably be a bit shorter, but right now I'm tired of counting backreferences. :P</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> 229 bytes</h1>
-<p><em>-55 bytes by encoding the character positions as a list.</em><br />
-<em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
-<em>-6 bytes by using unprintables.</em><br />
-<em>-4 bytes by using</em> <code>[0]*n</code> <em>instead of</em> <code>range(n)</code><em>.</em></p>
-
-<pre class="lang-python prettyprint-override"><code>def f(n):
- l=[13*n*[' ']for i in range(10*n)];x,y=2*n,0
- for d in zip([8,6,2,0,2,6],[0,3,3,0,-3,-3]):
-  for _ in[0]*n:
-   for N,t in enumerate(map(ord,'&#3;&#1;&#5;\12&#6;&#8;&#12;&#17;&#16;&#18;&#9;&#14;')):l[y+t//5][x+t%5]='\/||'[N%4]
-   x+=d[0]-4;y+=d[1]
- return l
-</code></pre>
-<p>First example is inputted as 1.<br />
-The <code>\12</code> in the unprintable string is literal.</p>
-<p><a href="https://tio.run/##JY2BaoMwEIYZY2OTMro9QWCUJHqdUdtSWnyFvkAMRTBuDntKSEFH390lNncHPz8fX/rR/nSY7XszTZWuSc2QHwLS5jLJQgwlJVTVnSENaZCYEr81S0SIXB0HGPM0RBAB8UDlgb@mZ3IPO0hBuNspkAIyNwLWmVvl3TN@drgUKkRfzM0JrFdovF60Ka1ml7JnnamAPj48FUn6/LJ4X368vlHOD60cIxvHWyWHyK62KqdFfLtReVptlPcNUV45@3pzHH1KXGm0vRok7fRJetOgZTVLOQ/umRZIv367BudP6T1DzRLu3vQP" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 166 bytes</h1>
 
@@ -92,11 +93,11 @@ s}
 </code></pre>
 <p><a href="https://tio.run/##XY5NboMwGET3OYWDGss2dmNstwvCB9dASiIRUX5aIYNCVGwl6dWpu@3qzbzZzNfl@zLX18/pJuz40awtrBZy4qEHy96F4lOgEgnvwEHuiwo99qfTpjqWsAgnJj6Dz/u94jWElhtc5ob/uMIJkU2PMpMPH6TPeqFxXci0SrRUSuqXe3DYb8Gw@pnIRFZHv9PMxKSM/8J2Zgprek7JJMALsdMYKzaHIw4Wbug57oijaRRRssDEDF3b8UqG5oYsAqQOARmgt8A4pui@Qage7TwOzeswdiSyEKEYWXr4N7TE0iCf6y8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 79 bytes</h1>
 <pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
 </code></pre>
-<p><a href="https://ngn.codeberg.page/k#eJwFwUESQCAUANB9Fq6QGOEj9EMaCwun8A0rZ2hG7u69Z3nvbhFEKohCh3WufNkezuUODMcUSVucRtuZwZyq8OAhkchNCQQNgqVa9Zf0qRT1vmVRLD7GHjlwzdH99dEUfg==" rel="nofollow noreferrer">Try it online!</a></p>
-<p>Inserts one hexagon at a time in clockwise order: <a href="https://ngn.codeberg.page/k#eJwFwUEOQDAQAMA7B1+gxGLR0i2qcXDwCiucvKEJ/m7mnp9LzSCY5SsK/S5T5ct2dy53aGJKibWlcbDK9ObgwqPHBCg2JTI2hJZr2Z3gUxD1tmZhJL4guEG7H7siFCw=" rel="nofollow noreferrer">&quot;animation&quot;</a></p>
+<p><a href="https://ngn.codeberg.page/k#eJwFwUESQCAUANB9Fq6QGOEj9EMaCwun8A0rZ2hG7u69Z3nvbhFEKohCh3WufNkezuUODMcUSVucRtuZwZyq8OAhkchNCQQNgqVa9Zf0qRT1vmVRLD7GHjlwzdH99dEUfg==" rel="noreferrer">Try it online!</a></p>
+<p>Inserts one hexagon at a time in clockwise order: <a href="https://ngn.codeberg.page/k#eJwFwUEOQDAQAMA7B1+gxGLR0i2qcXDwCiucvKEJ/m7mnp9LzSCY5SsK/S5T5ct2dy53aGJKibWlcbDK9ObgwqPHBCg2JTI2hJZr2Z3gUxD1tmZhJL4guEG7H7siFCw=" rel="noreferrer">&quot;animation&quot;</a></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
