--- a/q/274051.html
+++ b/q/274051.html
@@ -26,15 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>189</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
-<tr d-ix="1"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
-<tr d-ix="2"><td>166</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
-<tr d-ix="3"><td>182</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="0"><td>180</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="1"><td>189</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="2"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
+<tr d-ix="3"><td>166</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
 <tr d-ix="4"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
 <tr d-ix="5"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="6"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> 189 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 180 bytes</h1>
+<p>Builds the output character by character.</p>
+
+<pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,p=n*2-1,g=x=&gt;y?` |/\\
+`[X=w-x-p,s=y&gt;h/2,c=x-p&gt;4&amp;X&gt;4,~x?x--&lt;p|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c?0:`1302203${y&lt;h&amp;y!=4*c}1010`[y%3*4|X+y%3*!s*2&amp;3]:(p-=y--%3&amp;&amp;2*s-1,x=w,4)]+g(x):&quot;&quot;)(w=p*4)
+</code></pre>
+<p><a href="https://tio.run/##Xc5NboMwEIbhfU7hoMayjd2A7XZBGLgGUhKJiPLTChkrRI2tkF6dutuuHs37bebr8n2Zm@unvQkzfbRrB6uBgngYwLB3IbkNSpHyHhwUvqzRsj@dNvWxgrtwwvIZfDHsJW8gXIXGVaH5jyudELldqjxZfIg@H4TCTZlkdaoSKRP18ggN@y1o1jzTJE3qo98pppcq/nM7M4nVOSNWgBdipzCWbA5vOLhzTc9xTxzNooiSO1im6dpNVzK2N2QQIHkI5IDegnFM0WODUDOZeRrb13HqSWQgQjEy9PBv6IihIT7XXw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> 189 bytes</h1>
 <p><em>-55 bytes by encoding the character positions as a list.</em><br />
 <em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
 <em>-6 bytes by using unprintables.</em><br />
@@ -53,7 +61,7 @@
 The <code>\12</code> in the unprintable string is literal.</p>
 <p><a href="https://tio.run/##JYzfSsMwFMYRUbQMmT7BASknTZ3pOuvKSl6heOVNGmTTViv1tIQ4Uti7d@32XX38vj9db39aWqWdGYavsoKKUbDxwMmYU9ZIteaOKwTUVWughprAbOm7ZAl3gc56mcvIgynbT9kOP99fH6M3HC9O9GOkKtKcJnAi9ty7vLgqlvH1zex@/nB7h5tG9aEVItHKhdZPtMRCHA6ocv9FZ3kol9PehXIvRLpIs350frpYeWBK@28ImqEzNVmGBeHzb1sT@9t2DM/@qWJxMGo4Ag" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
 <pre><code>( {2*$~1-2}) ( / \\){$~1}
 ($1 (\|\\ /){$~1}\|
 )($1( \|){#1+3}
@@ -73,7 +81,7 @@ $3$5 $1$7{$~1}
 <p>Generates the figure line by line. With reference to the N = 3 diagram, the output always contains one copy of the first four lines, then N-2 copies of the next three, then one copy of the next two, then N-2 copies of the next three, and finally one copy of the last four. These roughly correspond to the lines of the program, except that the last line of the program generates the last three lines of the output.</p>
 <p>This could probably be a bit shorter, but right now I'm tired of counting backreferences. :P</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 166 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 166 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{s=(' '*(w=16*n)+$/)*w
 v=w*~w/2
@@ -85,21 +93,13 @@ s}
 <p>Function that returns a newline separated string.</p>
 <p>Starts with a blank newline separated string, then adds one cube at a time, each cube built from 4 lines.</p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 182 bytes</h1>
-<p>Builds the output character by character.</p>
-
-<pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,p=n*2-1,g=x=&gt;y?` |/\\
-`[X=w-x-p,s=y&gt;h/2,c=x-p&gt;4&amp;X&gt;4,~x?x--&lt;p|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c?0:`1302203${y&lt;h&amp;y!=4*c}1010`[y%3*4+(X+y%3*!s*2&amp;3)]:(p-=y--%3&amp;&amp;2*s-1,x=w,4)]+g(x):&quot;&quot;)(w=p*4)
-</code></pre>
-<p><a href="https://tio.run/##XY5NboMwGET3OYWDGss2dmNstwvCB9dASiIRUX5aIYNCVGwl6dWpu@3qzbzZzNfl@zLX18/pJuz40awtrBZy4qEHy96F4lOgEgnvwEHuiwo99qfTpjqWsAgnJj6Dz/u94jWElhtc5ob/uMIJkU2PMpMPH6TPeqFxXci0SrRUSuqXe3DYb8Gw@pnIRFZHv9PMxKSM/8J2Zgprek7JJMALsdMYKzaHIw4Wbug57oijaRRRssDEDF3b8UqG5oYsAqQOARmgt8A4pui@Qage7TwOzeswdiSyEKEYWXr4N7TE0iCf6y8" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-</div>
 <div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 79 bytes</h1>
 <pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
 </code></pre>
 <p><a href="https://ngn.codeberg.page/k#eJwFwUESQCAUANB9Fq6QGOEj9EMaCwun8A0rZ2hG7u69Z3nvbhFEKohCh3WufNkezuUODMcUSVucRtuZwZyq8OAhkchNCQQNgqVa9Zf0qRT1vmVRLD7GHjlwzdH99dEUfg==" rel="noreferrer">Try it online!</a></p>
 <p>Inserts one hexagon at a time in clockwise order: <a href="https://ngn.codeberg.page/k#eJwFwUEOQDAQAMA7B1+gxGLR0i2qcXDwCiucvKEJ/m7mnp9LzSCY5SsK/S5T5ct2dy53aGJKibWlcbDK9ObgwqPHBCg2JTI2hJZr2Z3gUxD1tmZhJL4guEG7H7siFCw=" rel="noreferrer">&quot;animation&quot;</a></p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
 s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
 s!\\ /! | !gp
@@ -121,10 +121,10 @@ y!/\\!\\/!;s!/! !;s!\\ $!!;s!/ \\!/|\\!gp
 s!\\ /! | !gp
 s!| | ! \\|/!g;s/|$//;:
 </code></pre>
-<p><a href="https://tio.run/##dVGxbsJQDNz9Fc9SVNoMcYEujYeO/QFGCykUGiYaKREU5H9Pzy9UQhVdEsc@350v/W47jnvtueIkyYxb/dZeKpH8TElafUdpB5GOeoDYBaCzm4mLmWNYoOp0j7EZAMkTtx2BB3AHHp9aN/gsAOBoO6MJPgiAJ0EGXbwZJeuZQQyosNY7sHrQgghDx7pAYNoZdkEGrGfeycgfG1hH5QEJJ1iIjShJ1qkEpQyN1pt8ZFWK0OQkpwGHa0Aly7zFXu47Lzq6jYAhF9QQLpjzLSzOt@7@83U10@oqB4NONFgHitxT6dO1@A@RVgpBIWBlbY@pNLOnqrSDzeVBdLWh3yu0vkyRXk9JQXmBi5tw79nGTMJve9/vZJfDjBehMo5NQzRfLImazceW6PP0NTvrcbZ8eX49NsPpBw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##dVGxbsJQDNz9Fc9SVNoMcYEujYeO/QFGCykUGiYaKREU5H9Pzy9UQhVdEsc@350v/W47jnvtueIkyYxb/dZeKpH8TElafUdpB5GOeoDYBaCzm4mLmWNYoOp0j7EZAMkTtx2BB3AHHp9aN/gsAOBoO6MJPgiAJ0EGXbwZJeuZQQyosNY7sHrQgghDx7pAYNoZdkEGrGfeycgfG1hH5QEJJ1iIjShJ1qkEpQyN1pt8ZFWK0OQkpwGHa0Aly7zFXu47Lzq6jYAhF9QQLpjzLSzOt@7@83U10@oqB4NONFgHitxT6dO1@A@RVgpBIWBlbY@pNLOnqrSDzeVBdLWh3yu0vkyRXk9JQXmBi5tw79nGTMJve9/vZJfDjBehMo5NQzRfLImazceW6PP0NTvrcbZ8eX49NsPpBw" rel="noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>takes input as any unary character. works for inputs of 2 or more. basically it just outputs each line after it makes it. the little 'humps' between outputs in the test cases is the output for an input of 0; you can remove the extra newlines in the input if you want to see the output without them.</p>
 <p>here's with trying to output three lines at a time:</p>
-<h3><s><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 566 bytes</s></h3>
+<h3><s><a href="https://www.gnu.org/software/sed/" rel="noreferrer">sed 4.2.2</a>, 566 bytes</s></h3>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
 s! /!|/!g;y|\\/|/\\|;s/$/|/p;h
 s!\\ /! | !gp
@@ -144,7 +144,7 @@ T;s!\n\( *\)\n\1!!;t;s/\n *\n *//p;tk
 :;s!\\    !\\ / \\!;t;p;s/^/  /gm;s/|  .*//gm;s!/ \\.*$!/!
 :q;s/....$/&amp;&amp;/mg
 </code></pre>
-<p><a href="https://tio.run/##TVJBboNADLzvK9YSQikHrDQ3/IB8ILe4kYgagRQF0ZBDK/nvdGxImxW72h0PnmGW6fI5z71MVFPmrEqdfMvENXOsOXMne2x1YB7TBBIZg/RjqmysaigW2I3So6wKQrZM3ZjQB3QDH0dpWhwLEMhhI4DezzWNMsaqbHUF7b07qnVTV/qmg25Jt@a9jdxDjHD7BzJeK3Xwh0FZcYMVo12XDiEap1CE@k4Od2cGuGBouJNzn@B1hJUTRPjWibvMagaPZTgF1vQS9Uebmju42XSAhWz87Jl1k@F@VYWxp4ZuFwsk50tqri4UOd8k8nOBJSWLvVGXmovXhuNJh4@qoLKkSOh4ygAo0/v6iYgqRCMykkdcHABMXJ88rql5FVkyBG18NcHQ9UsIQ86oIcmUmi//JTAKLkvkMs9tm9plPtf/8Qs" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##TVJBboNADLzvK9YSQikHrDQ3/IB8ILe4kYgagRQF0ZBDK/nvdGxImxW72h0PnmGW6fI5z71MVFPmrEqdfMvENXOsOXMne2x1YB7TBBIZg/RjqmysaigW2I3So6wKQrZM3ZjQB3QDH0dpWhwLEMhhI4DezzWNMsaqbHUF7b07qnVTV/qmg25Jt@a9jdxDjHD7BzJeK3Xwh0FZcYMVo12XDiEap1CE@k4Od2cGuGBouJNzn@B1hJUTRPjWibvMagaPZTgF1vQS9Uebmju42XSAhWz87Jl1k@F@VYWxp4ZuFwsk50tqri4UOd8k8nOBJSWLvVGXmovXhuNJh4@qoLKkSOh4ygAo0/v6iYgqRCMykkdcHABMXJ88rql5FVkyBG18NcHQ9UsIQ86oIcmUmi//JTAKLkvkMs9tm9plPtf/8Qs" rel="noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
 <p>this one doesn't work yet (the last line of cubes is proving particularly hard to measure) but doing it this way might make it easier to golf.</p>
 </div>
 <div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="noreferrer">Charcoal</a>, 41 bytes</h1>
