--- a/q/274061.html
+++ b/q/274061.html
@@ -26,19 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>047</td><td>R</td><td>240711T055300Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274070#274070">pajonk</a></td></tr>
-<tr d-ix="1"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
-<tr d-ix="2"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
-<tr d-ix="3"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
-<tr d-ix="4"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
+<tr d-ix="0"><td>024</td><td>QuadR i</td><td>240711T062145Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274072#274072">Ad&#225;</a></td></tr>
+<tr d-ix="1"><td>047</td><td>R</td><td>240711T055300Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274070#274070">pajonk</a></td></tr>
+<tr d-ix="2"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
+<tr d-ix="3"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
+<tr d-ix="4"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
+<tr d-ix="5"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 47 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a> <code>i</code>, 24 bytes</h1>
+
+<pre class="lang-none prettyprint-override"><code>^(11$|8|h?[oó]).*
+.+
+u
+o
+</code></pre>
+<p><a href="https://tio.run/##FU29CsJAGNvzHA7@gHAUpJuDCHU6QcRBFA7v8CrXBr/arS/k3M31Huy8khASCMm7N1ZSus@Vmg3l4LdXxvG2WC@xXqEHUzLBvUxrhYhjcAQlZ1RxFKktURYFSiiFjKwbNCbAU1rCa5mKX6HDzvPBYD4OF4o9tPv2GerOQ580jiaPM79pnFERVZ/pusk0WeKvcZap/gM" rel="nofollow noreferrer" title="QuadR – Try It Online">Try it online!</a></p>
+<p>If at the very beginning (<code>^</code>) we find any of the following:</p>
+<ul>
+<li>&quot;11&quot; followed by the end (<code>$</code>)</li>
+<li>&quot;8&quot;</li>
+<li>an optional (<code>?</code>) &quot;h&quot; followed by &quot;o&quot; or &quot;ó&quot;</li>
+</ul>
+<p>then we replace it and anything that follows it (<code>.+</code>) with a &quot;u&quot;.</p>
+<p>Everything else (<code>.+</code>) we replace with an &quot;o&quot;.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 47 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(s)`if`(grepl(&quot;^h?[oó]|^11$|^8&quot;,s,T),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fZOxTsMwEIYHtj5FdTDYIghFlVAWxICQwhQkQAxJo1qN0wQ5vsqJt74JS0BiYO7GmqeApylqSglOYy-W_Pn_9d-d_fKq6rf08l1X6Zn3dR6Rks7ydEYWii8FgTi7CrFZT1ex656sYg-c0nmgDmhwAIG2su-j0zmrCIQ4jSTQ0VLlsiIpASb4M5OJQhj_LErHx2P8o-729Hf1qNvlJr2wagsmLFq_-VDIYQhfZzhHwSp-MPQTquRW3siFyMsMTHrHdrUedNbW0I9W6v8T9ykvcbAiXxeWVH7zWfBkf2GHR9uJRjLUxkxRcNNMd83WSuV7NxN7k4k5mC7td0B3H0SvAx2aoZJGB7o0UGw4dHAfWFKhNVVgpT72M7d_pq7bfQM" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 26 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 26 bytes</h1>
 <pre><code>Mi`^11$|^8|^h?[oó]
 T`d`\ou
 </code></pre>
@@ -50,20 +68,20 @@ T`d`\ou
 </code></pre>
 <p>Index that into the string <code>ou</code>. (<code>o</code> is magic in transliteration mode so it needs to be quoted to be literal. <code>d</code> is also magic, being a byte shorter than writing <code>01</code>.)</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:'ou'[s.strip('hH')[:1]in[*'oóOÓ']or'8'==s[:1]or'11'==s]
 </code></pre>
 <p>The list unpacking could be removed (-3 bytes) if strings matching <code>/^[hH]*$/g</code> could output <code>'u'</code> instead of <code>'o'</code>.</p>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYSj2/VD26WK@4pCizQEM9w0NdM9rKMDYzL1pLPf/wZv/Dk9Vj84vULdRtbYtBEkC2oSGIE/u/oCgzr0QjTUPd4/DmoqLMlHx1Tc3/AA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1>Google Sheets, 49 bytes</h1>
+<div id="pu4" class="pu"><h1>Google Sheets, 49 bytes</h1>
 <pre><code>=if(regexmatch(A1,&quot;(?i)^h?[oó]|^11$|^8&quot;),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p>Put the string in cell <code>A1</code> and the formula in <code>B1</code>. Expects that the data is text strings as specified in the question (<strong>Format &gt; Number &gt; Plain text</strong>). Uses <a href="https://codegolf.stackexchange.com/a/274064/119296">Arnauld's regex</a>.</p>
 <p><img src="https://i.sstatic.net/lGQOnHL9.png" alt="screenshot" /></p>
 </div>
-<div id="pu4" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu5" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;&quot;ou&quot;[+/^h?[oó]|^11$|^8/i.test(s)]
 </code></pre>
