--- a/q/274051.html
+++ b/q/274051.html
@@ -36,11 +36,39 @@
 </table>
 <div id="pu0" class="pu"><h1>JavaScript (ES6), 178 bytes</h1>
 <p>Builds the output character by character.</p>
-
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,p=n*2-1,g=x=&gt;y?`| /\\
 `[X=w-x-p,s=y&gt;h/2||-1,c=x-p&gt;4&amp;X&gt;4,~x?x--&lt;p|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c||`0312213${y/h|y==4*c}0101`[y%3*4|X-y%3*~-s&amp;3]:(p-=y--%3&amp;&amp;s,x=w,4)]+g(x):&quot;&quot;)(w=p*4)
 </code></pre>
 <p><a href="https://tio.run/##XcrdaoMwGMbx815FkFUS9Z2aZDtofe1tCG3BYv3YkBhqmQlNe@suO93RD/7P8335uczN7UvfQU3Xdu1wVVhSiwOq6BN4or0c8qRHg6U91I6kp9OmPla4gAGdzGjLIeXO@U@DvpQyrEqZvMzBABTaVUXmrI@2GECEjXN1JnLOc/H2sOngLKKMmmeWZ3l9tFsRSVfBny@YQ3HeUQ1oAbYiDOfE4JJIdo57atguCBhdUEeSrd10o2N7J4og4XtPgeTDG8eMPDaENJOap7F9H6eeBgoDEhPF9v@Gjirm43P9BQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<h3>Variables</h3>
+<p>The following diagram shows the most important variables used in the code:</p>
+<ul>
+<li><span class="math-container">\$y\$</span>: current row, initialized to <span class="math-container">\$h=6n-2\$</span></li>
+<li><span class="math-container">\$y \bmod 3\$</span>: cube row (1 = top, 0 = middle, 2 = bottom)</li>
+<li><span class="math-container">\$s\$</span>: sign (1 = top half / -1 = bottom half)</li>
+<li><span class="math-container">\$p\$</span>: padding, initialized to <span class="math-container">\$2n-1\$</span></li>
+<li><span class="math-container">\$c\$</span>: a flag set when we are located in the center part</li>
+</ul>
+
+<pre><code>                       |  y | y%3 |  s | p
+-----------------------+----+-----+----+---
+ ...../.\./.\./.\..... | 16 |  1  |  1 | 5
+ ....|\./|\./|\./|.... | 15 |  0  |  1 | 4
+ ....|.|.|.|.|.|.|.... | 14 |  2  |  1 | 4
+ .../.\|/.\|/.\|/.\... | 13 |  1  |  1 | 3
+ ..|\./|ccccccc|\./|.. | 12 |  0  |  1 | 2
+ ..|.|.|ccccccc|.|.|.. | 11 |  2  |  1 | 2
+ ./.\|/ccccccccc\|/.\. | 10 |  1  |  1 | 1
+ |\./|ccccccccccc|\./| |  9 |  0  |  1 | 0
+ |.|.|ccccccccccc|.|.| |  8 |  2  | -1 | 0
+ .\|/.\ccccccccc/.\|/. |  7 |  1  | -1 | 1
+ ..|\./|ccccccc|\./|.. |  6 |  0  | -1 | 2
+ ..|.|.|ccccccc|.|.|.. |  5 |  2  | -1 | 2
+ ...\|/.\./.\./.\|/... |  4 |  1  | -1 | 3
+ ....|\./|\./|\./|.... |  3 |  0  | -1 | 4
+ ....|.|.|.|.|.|.|.... |  2 |  2  | -1 | 4
+ .....\|/.\|/.\|/..... |  1 |  1  | -1 | 5
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> 189 bytes</h1>
 <p><em>-55 bytes by encoding the character positions as a list.</em><br />
