--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>291</td><td>sed 4.2.2</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>287</td><td>sed 4.2.2</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>019</td><td>Arturo</td><td>221112T142519Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/254508#254508">chunes</a></td></tr>
 <tr d-ix="2"><td>005</td><td>Japt</td><td>211004T133302Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235995#235995">Shaggy</a></td></tr>
 <tr d-ix="3"><td>nan</td><td></td><td>240706T022007Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/273954#273954">RARE Kpo</a></td></tr>
@@ -106,60 +106,23 @@
 <tr d-ix="77"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="78"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, 291 bytes</h1>
-<pre><code>h
-G
-G
-:s
-s/.\n/\n\n/g
-x
-s/\n.*//
-tl
-:a
-s/.*/&amp;\n&amp;/m
-T
-:l
-x
-s/^a//
-x
-ta
-G
-x
-g
-s/\n(.)/\1/g
-T
-s/(..+)(\n..+)(\n.*)/\1\2\3/
-ts
-x
-s/\n.*//
-G
-T
-s/.(.*\n)(.*)\n.\n([^\x0]*).(\x0.*)?$/\1\1\3\4\x0\2/
-h
-ts
-s/[^\x0]*//
-y/\x0/\n/
-h
-s/.*/a/
-t
-:m
-s/.*/&amp;\n&amp;/m
-:
-t
-x
-s/^a//
-x
-tm
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>291</s> 287 bytes</h1>
+<pre><code>h;G;G;:s
+s/.\n/\n\n/g;x;s/\n.*//;tl
+:a;s/.*/&amp;\n&amp;/m;T
+:l;x;s/^a//;x;ta
+G;x;g;s/\n(.)/\1/g
+T;s/(..+)(\n..+)(\n.*)/\1\2\3/;ts
+x;s/\n.*//;G
+T;s/.(.*\n)(.*)\n.\n([^\x0]*).(\x0.*)?$/\1\1\3\4\x0\2/;h;ts
+s/[^\x0]*//;y/\x0/\n/;h;s/.*/a/
+t;:m;s/.*/&amp;\n&amp;/m
+:;t;x;s/^a//;x;tm
 s/\n?//g
-Td
-x
-s/\na//
-x
-t
-:d
+T;x;s/\na//;x;t
 </code></pre>
-<p><a href="https://tio.run/##VY/dasMwDIXv9Ryj2B6TmqT7M6G97Av0blrBkNEOGnfMucheft6xyUWHQbZ1pE9H6WPI@Ux7HJ8oCWsUjQgnmvHVyE6Epgv5UFQnK40rGelA/lIrjgH6TFMAYaZT7TFsRRsgDvga5ntrAFouVzRttQM23Q7Z13I27DRaRIs8WG9HndfvzrLBjezurvQ32ukGCW2FzgWUZCkE6UfwArZI1XTALPLjvw08UrcLjNXJTortYfG1SOSHnADp@6btNo9Pzy@vYd1spW5nexhuTHBs2W2lGJqGHEL4vX5Nn9eY8sP3Hw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>takes input and output as unary <code>a</code>s. TIO link includes footer to convert the result into decimal, but it's a very slow conversion so if you want to test '5' you have to remove it and count the 86400000 <code>a</code>s yourself. (note that 86400000 <code>a</code>s are more than 128 KiB so you have to add a s/a{1000}/a/g to the footer. if you were wondering, it was correct.)</p>
+<p><a href="https://tio.run/##VU/LTsMwELzvd6DKNsLbJC0tdtQe8wO9sVSyFJQiNSnCPoSfJ4xDDkWW9jWz49n43k7TxTd4LlJkKwPLgND50UeU1jD7dCUX0KJZybDi3p/IXWfGOQAffQrUIHXzjrKapeCOTmiVtY9aQWhJJmNSSgXZSHefNDPdKmtk0Igac2i9nmVcvxltFTKmx4e8X0glGwykZH/JQpEXIpS@GRVkMzSbDkzJu/7@AnI@/Tugp@zkyLPtP1sLMrkWWOC6Lspqs33e7V/Cujgw5eN0Db@FCsZqaw4MP5TaKYTwc/tMH7chTk9fvw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
+<p>takes input and output as unary <code>a</code>s. TIO link includes footer to convert the result into decimal, but it's a very slow conversion so if you want to test '5' you have to remove it and count the 86400000 <code>a</code>s yourself. (note that 86400000 <code>a</code>s are more than 128 KiB so you have to add something like <code>s/a{1000}/a/g</code> to the footer. it is correct though; I did check.)</p>
 <p>I'll come back and explain later, but the answer to 'how???' is loops. lots of loops.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <s>29</s> <s>22</s> 19 bytes</h1>
