--- a/q/235964.html
+++ b/q/235964.html
@@ -107,22 +107,23 @@
 <tr d-ix="78"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
 <div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a>, <s>291</s> 287 bytes</h1>
-<pre><code>h;G;G;:s
-s/.\n/\n\n/g;x;s/\n.*//;tl
-:a;s/.*/&amp;\n&amp;/m;T
-:l;x;s/^a//;x;ta
+<pre><code>h;G;G;:a
+s/.\n/\n\n/g;x;s/\n.*//;tc
+:b;s/.*/&amp;\n&amp;/m;T
+:c;x;s/^#//;x;tb
 G;x;g;s/\n(.)/\1/g
-T;s/(..+)(\n..+)(\n.*)/\1\2\3/;ts
+T;s/(..+)(\n..+)(\n.*)/\1\2\3/;ta
 x;s/\n.*//;G
-T;s/.(.*\n)(.*)\n.\n([^\x0]*).(\x0.*)?$/\1\1\3\4\x0\2/;h;ts
-s/[^\x0]*//;y/\x0/\n/;h;s/.*/a/
-t;:m;s/.*/&amp;\n&amp;/m
-:;t;x;s/^a//;x;tm
+T;s/.(.*\n)(.*)\n.\n([^\x0]*).(\x0.*)?$/\1\1\3\4\x0\2/;h;ta
+s/[^\x0]*//;y/\x0/\n/;h;s/.*/#/
+t;:d;s/.*/&amp;\n&amp;/m
+:;t;x;s/^#//;x;td
 s/\n?//g
-T;x;s/\na//;x;t
+T;x;s/\n#//;x;t
 </code></pre>
-<p><a href="https://tio.run/##VU/LTsMwELzvd6DKNsLbJC0tdtQe8wO9sVSyFJQiNSnCPoSfJ4xDDkWW9jWz49n43k7TxTd4LlJkKwPLgND50UeU1jD7dCUX0KJZybDi3p/IXWfGOQAffQrUIHXzjrKapeCOTmiVtY9aQWhJJmNSSgXZSHefNDPdKmtk0Igac2i9nmVcvxltFTKmx4e8X0glGwykZH/JQpEXIpS@GRVkMzSbDkzJu/7@AnI@/Tugp@zkyLPtP1sLMrkWWOC6Lspqs33e7V/Cujgw5eN0Db@FCsZqaw4MP5TaKYTwc/tMH7chTk9fvw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online!</a></p>
-<p>takes input and output as unary <code>a</code>s. TIO link includes footer to convert the result into decimal, but it's a very slow conversion so if you want to test '5' you have to remove it and count the 86400000 <code>a</code>s yourself. (note that 86400000 <code>a</code>s are more than 128 KiB so you have to add something like <code>s/a{1000}/a/g</code> to the footer. it is correct though; I did check.)</p>
+<p><a href="https://tio.run/##VVBBbsIwELzvN1xFTiq8dhLaxo7gmA9wwyABgdBDQ9XkED7fdBxoRWVp17szHs9ud6xHe3Qdr82s2HAkuKErmzTL5y@vbwXr3ytTx0JzIdj1ga@Zm/HsKhy7A6Z8y75FaNwA2LcqYVAPZPcoUUS@jfjDrcgeJsZWAB9cv6cKqZneSBWzN7CwQimVeo4lhO4pCZhPfQbZHT18Uk10JVXi2xgxRh9a660f9CaJlURGd/kU3huf@RwNn7I7ByGMfiNC6cq4QTZAk2nB1DtbP05A1vX/BqgpOFnyZPtm646M9oRScFn@LVRoswirxKQl/BopEhWrZMHBT38aNRlKKaP8@/LZv1/abpx9/QA" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0 to 4, ~30 seconds)</a><br />
+<a href="https://tio.run/##XVFBboMwELzvN1whoIrXhqQtNkqO@UBucSKRkJAeSqrCgajq10vHJK1IQfJ6d8bj2XVzKHtzsA2v9STbcCC4ogvrJJ3Onp5fMla/W6aGheJMsG09XzFX/cku8ZsCmHQ1uxpLZTvArpYxg7ons0OKJHB1wG92RWY/MLYCeGfbHS0RquFMKCN2GhZWSEMpH6MQQrcQe8wlLoVsQaNLlgNdhjJ2dYQ1Qh1a663r1CaOZIiI6uLBn9cudVMUXML25IXQ@pUIpQtjB1kPDaYFU2tNOe6AjG3vGijJO1nwYPtq64b0GNmnVvi@uABsjkALzvO/@RZKz/1k0XgO@zosYhnJeM7eXnv05hTeBXd7FSbj5yTGCuK/ghgrVEC2Cq31ijQllNKUZt/n9/b1XDf95OMH" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0 to 5, ~50 seconds, longer footer)</a></p>
+<p>takes input and output as unary <code>a</code>s. TIO links include conversion to and from decimal in header/footer.</p>
 <p>I'll come back and explain later, but the answer to 'how???' is loops. lots of loops.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, <s>29</s> <s>22</s> 19 bytes</h1>
