--- a/q/274051.html
+++ b/q/274051.html
@@ -26,22 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>178</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
-<tr d-ix="1"><td>189</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
-<tr d-ix="2"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
-<tr d-ix="3"><td>166</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
-<tr d-ix="4"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
+<tr d-ix="0"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
+<tr d-ix="1"><td>178</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="2"><td>189</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="3"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
+<tr d-ix="4"><td>166</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
 <tr d-ix="5"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="6"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES6), 178 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
+<pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
+</code></pre>
+<p><a href="https://ngn.codeberg.page/k#eJwFwUESQCAUANB9Fq6QGOEj9EMaCwun8A0rZ2hG7u69Z3nvbhFEKohCh3WufNkezuUODMcUSVucRtuZwZyq8OAhkchNCQQNgqVa9Zf0qRT1vmVRLD7GHjlwzdH99dEUfg==" rel="nofollow noreferrer">Try it online!</a></p>
+<p>Inserts one cube at a time in clockwise order: <a href="https://ngn.codeberg.page/k#eJwFwUEOQDAQAMA7B1+gxGLR0i2qcXDwCiucvKEJ/m7mnp9LzSCY5SsK/S5T5ct2dy53aGJKibWlcbDK9ObgwqPHBCg2JTI2hJZr2Z3gUxD1tmZhJL4guEG7H7siFCw=" rel="nofollow noreferrer">&quot;animation&quot;</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES6), 178 bytes</h1>
 <p>Builds the output character by character.</p>
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,p=n*2-1,g=x=&gt;y?`| /\\
 `[X=w-x-p,s=y&gt;h/2||-1,c=x-p&gt;4&amp;X&gt;4,~x?x--&lt;p|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c||`0312213${y/h|y==4*c}0101`[y%3*4|X-y%3*~-s&amp;3]:(p-=y--%3&amp;&amp;s,x=w,4)]+g(x):&quot;&quot;)(w=p*4)
 </code></pre>
 <p><a href="https://tio.run/##XcrdaoMwGMbx815FkFUS9Z2aZDtofe1tCG3BYv3YkBhqmQlNe@suO93RD/7P8335uczN7UvfQU3Xdu1wVVhSiwOq6BN4or0c8qRHg6U91I6kp9OmPla4gAGdzGjLIeXO@U@DvpQyrEqZvMzBABTaVUXmrI@2GECEjXN1JnLOc/H2sOngLKKMmmeWZ3l9tFsRSVfBny@YQ3HeUQ1oAbYiDOfE4JJIdo57atguCBhdUEeSrd10o2N7J4og4XtPgeTDG8eMPDaENJOap7F9H6eeBgoDEhPF9v@Gjirm43P9BQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Variables</h3>
-<p>The diagram below shows the most important variables used in the code:</p>
+<p>Below are the most important variables used in the code:</p>
 <ul>
 <li><span class="math-container">\$x\$</span> : current column, initialized to the width <span class="math-container">\$w=8n-4\$</span></li>
 <li><span class="math-container">\$y\$</span> : current row, initialized to the height <span class="math-container">\$h=6n-2\$</span></li>
@@ -50,7 +56,7 @@
 <li><span class="math-container">\$p\$</span> : left/right padding, initialized to <span class="math-container">\$2n-1\$</span></li>
 <li><span class="math-container">\$c\$</span> : a flag set when we are located in the center part</li>
 </ul>
-
+<p>For <span class="math-container">\$n=3\$</span>, this leads to the following diagram:</p>
 <pre><code>x=20                 x=-1
  |                    |  |  y | y%3 |  s | p
 -v--------------------v--+----+-----+----+---
@@ -72,7 +78,7 @@
  .....\|/.\|/.\|/.....\n |  1 |  1  | -1 | 5
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> 189 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> 189 bytes</h1>
 <p><em>-55 bytes by encoding the character positions as a list.</em><br />
 <em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
 <em>-6 bytes by using unprintables.</em><br />
@@ -91,7 +97,7 @@
 The <code>\12</code> in the unprintable string is literal.</p>
 <p><a href="https://tio.run/##JYzfSsMwFMYRUbQMmT7BASknTZ3pOuvKSl6heOVNGmTTViv1tIQ4Uti7d@32XX38vj9db39aWqWdGYavsoKKUbDxwMmYU9ZIteaOKwTUVWughprAbOm7ZAl3gc56mcvIgynbT9kOP99fH6M3HC9O9GOkKtKcJnAi9ty7vLgqlvH1zex@/nB7h5tG9aEVItHKhdZPtMRCHA6ocv9FZ3kol9PehXIvRLpIs350frpYeWBK@28ImqEzNVmGBeHzb1sT@9t2DM/@qWJxMGo4Ag" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/dloscutoff/Esolangs/tree/master/Regenerate" rel="nofollow noreferrer">Regenerate</a>, 318 bytes</h1>
 <pre><code>( {2*$~1-2}) ( / \\){$~1}
 ($1 (\|\\ /){$~1}\|
 )($1( \|){#1+3}
@@ -111,7 +117,7 @@ $3$5 $1$7{$~1}
 <p>Generates the figure line by line. With reference to the N = 3 diagram, the output always contains one copy of the first four lines, then N-2 copies of the next three, then one copy of the next two, then N-2 copies of the next three, and finally one copy of the last four. These roughly correspond to the lines of the program, except that the last line of the program generates the last three lines of the output.</p>
 <p>This could probably be a bit shorter, but right now I'm tired of counting backreferences. :P</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 166 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 166 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{s=(' '*(w=16*n)+$/)*w
 v=w*~w/2
@@ -122,12 +128,6 @@ s}
 <p><a href="https://tio.run/##HYxNDoMgGET3noJF/UMoAbGrfr0IsmlSE9GapqikEb06JWaSmZe3mO/y/IUOAn1Mm4UiRzkuHPAbnsrqwkrskhUcPhwTSSFktNe5f7/s5ntfGOhTWd55lq0VKOpwTTmRJG7VnM0JleT0jVY9k2zSiVUrNfGQHgOYlNZMkBFqOmChIWeoRci3iHmPYlofIVcGN2TUe2L38FlmizoldPgD" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
 <p>Function that returns a newline separated string.</p>
 <p>Starts with a blank newline separated string, then adds one cube at a time, each cube built from 4 lines.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="noreferrer">K (ngn/k)</a>, 79 bytes</h1>
-<pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
-</code></pre>
-<p><a href="https://ngn.codeberg.page/k#eJwFwUESQCAUANB9Fq6QGOEj9EMaCwun8A0rZ2hG7u69Z3nvbhFEKohCh3WufNkezuUODMcUSVucRtuZwZyq8OAhkchNCQQNgqVa9Zf0qRT1vmVRLD7GHjlwzdH99dEUfg==" rel="noreferrer">Try it online!</a></p>
-<p>Inserts one hexagon at a time in clockwise order: <a href="https://ngn.codeberg.page/k#eJwFwUEOQDAQAMA7B1+gxGLR0i2qcXDwCiucvKEJ/m7mnp9LzSCY5SsK/S5T5ct2dy53aGJKibWlcbDK9ObgwqPHBCg2JTI2hJZr2Z3gUxD1tmZhJL4guEG7H7siFCw=" rel="noreferrer">&quot;animation&quot;</a></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="noreferrer">sed 4.2.2</a>, <s>573</s> 572 bytes</h1>
 <pre><code>h;s!.! / \\!g;x;s/.//;s/./  /g;G;s/\n//p
