--- a/q/274061.html
+++ b/q/274061.html
@@ -26,26 +26,34 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>041</td><td>Ruby</td><td>240711T081015Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274077#274077">int 21h </a></td></tr>
-<tr d-ix="1"><td>044</td><td>Java</td><td>240711T082106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274078#274078">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>049</td><td>Bash</td><td>240711T080538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274076#274076">Themooni</a></td></tr>
-<tr d-ix="3"><td>024</td><td>05AB1E</td><td>240711T074131Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274075#274075">Kevin Cr</a></td></tr>
-<tr d-ix="4"><td>024</td><td>Charcoal</td><td>240711T063055Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274074#274074">Neil</a></td></tr>
-<tr d-ix="5"><td>024</td><td>QuadR i</td><td>240711T062145Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274072#274072">Ad&#225;</a></td></tr>
-<tr d-ix="6"><td>047</td><td>R</td><td>240711T055300Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274070#274070">pajonk</a></td></tr>
-<tr d-ix="7"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
-<tr d-ix="8"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
-<tr d-ix="9"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
-<tr d-ix="10"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
+<tr d-ix="0"><td>064</td><td>Python</td><td>240711T130805Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274081#274081">pajonk</a></td></tr>
+<tr d-ix="1"><td>041</td><td>Ruby</td><td>240711T081015Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274077#274077">int 21h </a></td></tr>
+<tr d-ix="2"><td>044</td><td>Java</td><td>240711T082106Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274078#274078">Kevin Cr</a></td></tr>
+<tr d-ix="3"><td>049</td><td>Bash</td><td>240711T080538Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274076#274076">Themooni</a></td></tr>
+<tr d-ix="4"><td>024</td><td>05AB1E</td><td>240711T074131Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274075#274075">Kevin Cr</a></td></tr>
+<tr d-ix="5"><td>024</td><td>Charcoal</td><td>240711T063055Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274074#274074">Neil</a></td></tr>
+<tr d-ix="6"><td>024</td><td>QuadR i</td><td>240711T062145Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274072#274072">Ad&#225;</a></td></tr>
+<tr d-ix="7"><td>047</td><td>R</td><td>240711T055300Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274070#274070">pajonk</a></td></tr>
+<tr d-ix="8"><td>026</td><td>Retina 0.8.2</td><td>240711T001547Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274069#274069">Neil</a></td></tr>
+<tr d-ix="9"><td>066</td><td>Python 3.8 prerelease</td><td>240710T235814Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274067#274067">squarero</a></td></tr>
+<tr d-ix="10"><td>049</td><td>Google Sheets</td><td>240710T202030Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274065#274065">doubleun</a></td></tr>
+<tr d-ix="11"><td>037</td><td>JavaScript ES6</td><td>240710T200347Z</td><td><a href="https://codegolf.stackexchange.com/questions/274061/o-y-u-or-and-or/274064#274064">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 64 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>lambda s:re.match(&quot;(?i)^h?[oó]|^11$|^8&quot;,s)and&quot;u&quot;or&quot;o&quot;
+import re
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=fZPPSsQwEMYP3vYpyuihBf9QFqQIsoII9VRBxEO7hbhNbSXNlLQ5CPsmXgqi4HlvXvsU69O42LrGdJu5hOSX-fhmJnl5L5_rDHnzmp5Hb7JOj7z1BSPFQ0Ks6kzQ44LUi8wGe5Y7cTYLsV3Nl7HrHixjDw4rh_AEJKAAhElelChqS9BO52vvpBQ5r20IcR5xcCbdNrWBMPq0yRQI1iYcx9q38I-6P6e_MaCuynV6aswtCDPk-u2HQApj-DLDBTJS052m71Ek1_yKP7K8ykCnN6SvdaeyNJq-M1L_X_KQ0gpHK_JlYXDlt58FTbYXetxziHgotakio7qcVOVWQuRbPR1706k-GpUOeyDVJzHogUIzFFzrgUoDQcZNB7eBwRUaXQVG6uPQc_dvmqZbvwE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 41 bytes</h1>
 <pre class="lang-ruby prettyprint-override"><code>-&gt;s{(s=~/^h?[oó]|^11$|^8/i).nil?? ?o:?u}
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=NZDBSsQwEIbxug8hoXhwobtLWZAidHsQYT1VEPFQWogmNVnSjCQNVFx9ES9F9OC5N699Cn0aS6Z7-b9__mGGZN4_jbt_7j6q5Ms11SL-nS829uXUJm-rUqQ5DH2xL6PoZF_GKzlfaqnSlKRwnrpXHPg7Oq7AkJZITfJZQBXfUc0MBCScBUOvODowY-7dduiNkQzjeL1Geo0ixFQgz7zWVHkKMBpHRWYOC78NcG8vBDyAog1Wd2DYlb7Uj0pa4ZPsJvO8ptMDUR02vd7iTmxs3QRuD0E9meGn5uMnCsKAPLnGkrwNA5JsSBBWeVsUyx2MF-Ga4Zm6DvkP" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Thanks to almost the same syntax, the regex is gratefully copypasted from the <a href="https://codegolf.stackexchange.com/a/274064/101276">Arnauld's answer</a> :D</p>
 <p>What I like here, is how three question marks appear together (alas, a space cannot be removed), each one having a different role: the first one is a part of the boolean expression that checks whether a value is <code>nil</code>, the second one belongs to the ternary operator and the last one is a shortcut for <code>'o'</code>.</p>
 </div>
-<div id="pu1" class="pu"><h1>Java, 44 bytes</h1>
+<div id="pu2" class="pu"><h1>Java, 44 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>s-&gt;s.matches(&quot;(?i)11|(8|h?[oó]).*&quot;)?'u':'o'
 </code></pre>
@@ -73,7 +81,7 @@
                   .*    #   Followed by 0 or more additional characters
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 49 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 49 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>grep -qiE '^h?[oó]|^11$|^8'&lt;&lt;&lt;$1&amp;&amp;echo u||echo o
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=lZE_T4NAGMbT0fsQ5hWxwNCk2MS0tfgnpkk71WiMA1KDcBSUcvWAxKQ0cfNDuHRQE-durv0UdvSTeIW7VgcHGe75vXfPve8DPL_c2LE_XZSeXOyENsVQOYYEx8m1Y8fYUJGpzGchJoplpIwJxbc25858RmngiqN6rSaIq64LYEryDUF7XId2yMknNBKt_B5dD3mnBHPPiU8cEtqJqC8JdbtROxqEQezzvd55j189tSnhm6JxKky8vuB1Rxg6wtFJcUxWPFzh_GOI3aLSEBrRIEo8UDLYqejVagwF_NJdtl5FCijdaJQmTM9wnIZLaD-MsJNgl2HvTkEIeaqmvqaJV6l_6gOKR1C5D9qg9P1Dk8xnVtbXdTnr15VWqyXr5TJ2fAJpluVKiouL0ibL5REKwXIcW0GSx1urP2oeWRNpH1yCNmiew5Bk1WOe3C5pEkLAnv-8GGsAqgryeDvvMYEDA9gd0DQolyEPxyLkZ81mozH5enyTIMvESTEYNIlxEWlJ43XiwsFi55NM84fPMP6yWtZq-PLjsvbIJRFGqPhM02mh3w" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -84,7 +92,7 @@
                                 &amp;&amp;echo u||echo o #if match, output u, o otherwise.
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 24 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 24 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>„ouIl'hæ„óoâJ8ªÅ?àI11Q~è
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f//UcO8/FLPHPWMw8uAzMOb8w8v8rI4tOpwq/3hBZ6GhoF1h1f8/29oCAA" rel="nofollow noreferrer">Try it online</a> or <a href="https://tio.run/##yy9OTMpM/V9Waa@k8KhtkoKS/f9HDfPySytz1DMOLwMyD2/OP7zIy@LQqsOt9ocXVBoaBtYdXvFf53@0UmJOalZiXkpRvpKO0uHNOakgOr8IKAakPQ5vLirKTAEJWRgbg0ggNjQEEWAGiDQD4tzEHCCZkV@UB1Ka4V8E0byyKD8VyHDOyE/Oz0ksAbHD84tSPPNc89JzMoszgHz/YH8gGZAIth6ES0GCQBwKMgEk4FEKJlKLIZxcMHV4V24q0FmxAA" rel="nofollow noreferrer">verify all test cases</a>.</p>
@@ -109,7 +117,7 @@ I               # Push the input-string again
                 # (after which the result is output implicitly)
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 24 bytes</h1>
 <pre><code>§uo∧⁻Ｎ¹¹⬤8oó⬤θ⌕↧θ⁺…hμι
 </code></pre>
 <p><a href="https://tio.run/##JYtNCsMgEIWvElxNwC6yK3QlgdJAW3IFq4LCxEmM9udcOUIOZgfyFo/H4/uM18mQxlrHFGIGlYdo3RdEISEbFS08QiwrDHEu@Vmml0vQyqbruBQiiDPtmzj2IptrYONOH5eMXh0sTI3Iev8z6HpPMwjP9MR/aI9car3tW0rBUj298Q8" rel="nofollow noreferrer" title="Charcoal – Try It Online">Try it online!</a> Link is to verbose version of code. Explanation:</p>
@@ -135,7 +143,7 @@ I               # Push the input-string again
 </code></pre>
 <p>Note that the version of Charcoal on TIO mistakenly counts <code>ó</code> as one byte but the version on ATO gets it right, or you can add the <code>-x</code> flag which produces an <code>xxd</code> style dump showing the correct number of bytes.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a> <code>i</code>, 24 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/abrudz/QuadRS" rel="nofollow noreferrer">QuadR</a> <code>i</code>, 24 bytes</h1>
 
 <pre class="lang-none prettyprint-override"><code>^(11$|8|h?[oó]).*
 .+
@@ -152,13 +160,13 @@ o
 <p>then we replace it and anything that follows it (<code>.+</code>) with a &quot;u&quot;.</p>
 <p>Everything else (<code>.+</code>) we replace with an &quot;o&quot;.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 47 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 47 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>\(s)`if`(grepl(&quot;^h?[oó]|^11$|^8&quot;,s,T),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=fZOxTsMwEIYHtj5FdTDYIghFlVAWxICQwhQkQAxJo1qN0wQ5vsqJt74JS0BiYO7GmqeApylqSglOYy-W_Pn_9d-d_fKq6rf08l1X6Zn3dR6Rks7ydEYWii8FgTi7CrFZT1ex656sYg-c0nmgDmhwAIG2su-j0zmrCIQ4jSTQ0VLlsiIpASb4M5OJQhj_LErHx2P8o-729Hf1qNvlJr2wagsmLFq_-VDIYQhfZzhHwSp-MPQTquRW3siFyMsMTHrHdrUedNbW0I9W6v8T9ykvcbAiXxeWVH7zWfBkf2GHR9uJRjLUxkxRcNNMd83WSuV7NxN7k4k5mC7td0B3H0SvAx2aoZJGB7o0UGw4dHAfWFKhNVVgpT72M7d_pq7bfQM" rel="nofollow noreferrer">Attempt This Online!</a></p>
 <p>Port of <a href="https://codegolf.stackexchange.com/a/274064/55372">@Arnauld's JavaScript regex answer</a>.</p>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 26 bytes</h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/m-ender/retina/wiki/The-Language/a950ad7d925ec9316e3e2fb2cf5d49fd15d23e3d" rel="nofollow noreferrer">Retina 0.8.2</a>, 26 bytes</h1>
 <pre><code>Mi`^11$|^8|^h?[oó]
 T`d`\ou
 </code></pre>
@@ -170,20 +178,20 @@ T`d`\ou
 </code></pre>
 <p>Index that into the string <code>ou</code>. (<code>o</code> is magic in transliteration mode so it needs to be quoted to be literal. <code>d</code> is also magic, being a byte shorter than writing <code>01</code>.)</p>
 </div>
-<div id="pu8" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
+<div id="pu9" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, 66 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>lambda s:'ou'[s.strip('hH')[:1]in[*'oóOÓ']or'8'==s[:1]or'11'==s]
 </code></pre>
 <p>The list unpacking could be removed (-3 bytes) if strings matching <code>/^[hH]*$/g</code> could output <code>'u'</code> instead of <code>'o'</code>.</p>
 <p><a href="https://tio.run/##K6gsycjPM7YoKPqfZhvzPycxNyklUaHYSj2/VD26WK@4pCizQEM9w0NdM9rKMDYzL1pLPf/wZv/Dk9Vj84vULdRtbYtBEkC2oSGIE/u/oCgzr0QjTUPd4/DmoqLMlHx1Tc3/AA" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu9" class="pu"><h1>Google Sheets, 49 bytes</h1>
+<div id="pu10" class="pu"><h1>Google Sheets, 49 bytes</h1>
 <pre><code>=if(regexmatch(A1,&quot;(?i)^h?[oó]|^11$|^8&quot;),&quot;u&quot;,&quot;o&quot;)
 </code></pre>
 <p>Put the string in cell <code>A1</code> and the formula in <code>B1</code>. Expects that the data is text strings as specified in the question (<strong>Format &gt; Number &gt; Plain text</strong>). Uses <a href="https://codegolf.stackexchange.com/a/274064/119296">Arnauld's regex</a>.</p>
 <p><img src="https://i.sstatic.net/lGQOnHL9.png" alt="screenshot" /></p>
 </div>
-<div id="pu10" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
+<div id="pu11" class="pu"><h1>JavaScript (ES6), 37 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>s=&gt;&quot;ou&quot;[+/^h?[oó]|^11$|^8/i.test(s)]
 </code></pre>
