--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240711T162019Z
+"   /golfscore                                      20240711T163451Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/235366.html">Is it a row of Pascals triangle?                : 0235366</a>
 <a href="q/274018.html">Keyboard Ping Pong                              : 0274018</a>
 <a href="q/274061.html">o y u (or and or)                               : 0274061</a>
 <a href="q/37365.html">Sort a list and write some English!             : 0037365</a>
